<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.theboss.tictactoe.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Reset"
        android:orderInCategory="100"
        android:title="@string/actionReset"
        app:showAsAction="never" />

    <item
        android:id="@+id/color_spinnerX"
        android:title="@string/color_X"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.Spinner"
        />

    <item
    android:id="@+id/color_spinnerO"
    android:title="@string/color_O"
    app:showAsAction="ifRoom|collapseActionView"
    app:actionViewClass="android.widget.Spinner"
    />

    <item
        android:id="@+id/change_Letter"
        android:title="@string/change_Letters"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.Spinner"
        />

</menu>
